# veritract

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: RESULTS.md  benchmark.md  benchmark.py  clinicaltrials_cache.json  clinicaltrials_dataset.py  dataset.py  ebmnlp_dataset.py  results.json  results_ct.json
demo/: veritract_demo.ipynb
examples/: extract_figures.py  extract_from_pdfs.py
tests/: test_extraction.py  test_grounding.py  test_llm.py  test_optimizer.py  test_pdf.py  test_types.py
veritract/: __init__.py  extraction.py  grounding.py  llm.py  optimizer.py  pdf.py  types.py
