[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritract"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "rapidfuzz>=3.6.0",
    "ollama>=0.2.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
